<resources>
	<string name="app_name">FeedBack</string>
	<string name="third_floor">Floor 3</string>
	<string name="first_floor">Floor 1</string>
	<string name="second_floor">Floor 2</string>
	<string name="selected_floor_first_floor">First Floor</string>
	<string name="mobile_number">Mobile Number<font color="#ff0000">*</font></string>
	<string name="your_name">Your Name<font color="#ff0000">*</font></string>
	<string name="enter_base_url">Enter Base URL</string>
	<string name="go">Go</string>
	<string name="welcome_to_n_j_ranjeet_jewellry">Welcome To</string>
	<string name="base_url_setup">Base URL Setup</string>
	<string name="j_ranjeet_jewellers">J Ranjeet Jewellers</string>
	<string name="select_floor">Select Floor</string>
	<string name="select_employee">Select Employee</string>
</resources>