<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                       xmlns:app="http://schemas.android.com/apk/res-auto"
                                       xmlns:tools="http://schemas.android.com/tools"
                                       android:layout_width="match_parent"
                                       android:layout_height="match_parent"
                                       android:fillViewport="true"
                                       tools:context="com.istrides.ranjeetfeedback.BaseActivity">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/rootLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/toolBar"
			android:layout_width="match_parent"
			android:layout_height="@dimen/_70sdp"
			android:background="@drawable/background"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/welcomeMessage"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/_5sdp"
			android:text="@string/welcome_to_n_j_ranjeet_jewellry"
			android:textAlignment="center"
			android:textColor="@android:color/black"
			android:textSize="@dimen/font_size_large"
			android:textStyle="bold"
			app:layout_constraintTop_toBottomOf="@+id/toolBar" />

		<androidx.appcompat.widget.AppCompatImageView
			android:id="@+id/logo"
			android:layout_width="@dimen/_60sdp"
			android:layout_height="@dimen/_60sdp"
			android:src="@drawable/logo"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/welcomeMessage" />

		<androidx.appcompat.widget.AppCompatImageView
			android:id="@+id/nameLogo"
			android:layout_width="match_parent"
			android:layout_height="@dimen/_40sdp"
			android:src="@drawable/logo_name"
			app:layout_constraintTop_toBottomOf="@+id/logo" />

		<TextView
			android:id="@+id/textView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/_10sdp"
			android:text="@string/base_url_setup"
			android:textColor="@android:color/black"
			android:textSize="@dimen/font_size_large"
			android:textStyle="bold"
			app:layout_constraintVertical_bias="0.3"
			android:layout_marginTop="@dimen/_20sdp"
			app:layout_constraintBottom_toTopOf="@+id/baseURLLayout"
			app:layout_constraintTop_toBottomOf="@+id/nameLogo"
			app:layout_constraintVertical_chainStyle="packed" />

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/baseURLLayout"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/_10sdp"
			android:hint="@string/enter_base_url"
			app:endIconMode="clear_text"
			app:hintAnimationEnabled="true"
			app:hintTextColor="@android:color/black"
			app:layout_constraintBottom_toTopOf="@+id/next"
			app:layout_constraintTop_toBottomOf="@+id/textView"
			app:layout_constraintVertical_chainStyle="packed">

			<com.google.android.material.textfield.TextInputEditText
				android:layout_width="match_parent"
				android:id="@+id/baseURL"
				android:layout_height="wrap_content"
				android:imeOptions="actionDone"
				android:maxLines="1" />

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.button.MaterialButton
			android:id="@+id/next"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/_10sdp"
			android:drawableEnd="@drawable/ic_arrow_forward_black_24dp"
			android:text="@string/go"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/baseURLLayout" />

	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>