<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".MainActivity">


	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="@dimen/_60sdp"
		android:background="@drawable/header_register"
		app:layout_constraintTop_toTopOf="parent">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Select Floor"
			android:textStyle="bold"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			android:textColor="@android:color/white"
			android:textSize="@dimen/font_size_large" />

		<androidx.appcompat.widget.AppCompatImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/_15sdp"
			android:clickable="true"
			android:foreground="?attr/selectableItemBackground"
			android:src="@drawable/ic_home_black_24dp"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"/>

	</androidx.constraintlayout.widget.ConstraintLayout>

	<androidx.cardview.widget.CardView
		android:id="@+id/firstFloor"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:clipToPadding="false"
		android:elevation="@dimen/_4sdp"
		android:layout_marginVertical="@dimen/_8sdp"
		app:cardUseCompatPadding="true"
		app:layout_constraintBottom_toTopOf="@+id/secondFloor"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_chainStyle="packed">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="@dimen/_12sdp"
			android:text="@string/first_floor"
			android:textAlignment="center"
			android:textSize="@dimen/font_size_large"
			android:textStyle="bold" />

	</androidx.cardview.widget.CardView>

	<androidx.cardview.widget.CardView
		android:id="@+id/secondFloor"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:clipToPadding="false"
		android:elevation="@dimen/_4sdp"
		android:layout_marginVertical="@dimen/_8sdp"
		app:cardUseCompatPadding="true"
		app:layout_constraintBottom_toTopOf="@+id/thirdFloor"
		app:layout_constraintTop_toBottomOf="@+id/firstFloor">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="@dimen/_12sdp"
			android:text="@string/second_floor"
			android:textAlignment="center"
			android:textSize="@dimen/font_size_large"
			android:textStyle="bold" />

	</androidx.cardview.widget.CardView>

	<androidx.cardview.widget.CardView
		android:id="@+id/thirdFloor"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:clipToPadding="false"
		android:elevation="@dimen/_4sdp"
		app:cardUseCompatPadding="true"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/secondFloor">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="@dimen/_12sdp"
			android:text="@string/third_floor"
			android:textAlignment="center"
			android:textSize="@dimen/font_size_large"
			android:textStyle="bold" />

	</androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>